fix: misc. fixes, placeholders, inv clear, timers